--- a/env.test.example
+++ b/env.test.example
@@ -2,17 +2,20 @@
 # Docker Compose로 로컬 테스트 시 사용
 # 사용법: cp env.test.example .env
 
-# Neo4j Configuration
+# Neo4j
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=password123
+neo4j_database=
 
-# OpenAI Configuration (본인의 API 키로 변경 필요)
-OPENAI_API_KEY=your-openai-api-key-here
-OPENAI_EMBEDDING_MODEL=text-embedding-3-large
-OPENAI_LLM_MODEL=gpt-4o-mini
+# Ingest + Embedding Search
+OPENAI_API_KEY=your-openai-api-key
+IS_USE_LLM_CACHE=false
 
-# Target Database (Docker Compose PostgreSQL)
+# ReAct Agent
+GOOGLE_API_KEY=your-google-api-key
+
+# Target Database
 TARGET_DB_TYPE=postgresql
 TARGET_DB_HOST=localhost
 TARGET_DB_PORT=5432
@@ -20,24 +23,3 @@ TARGET_DB_NAME=testdb
 TARGET_DB_USER=readonly
 TARGET_DB_PASSWORD=readonly123
 TARGET_DB_SCHEMA=public
-
-# API Configuration
-API_HOST=0.0.0.0
-API_PORT=8000
-API_WORKERS=1
-
-# Security & Limits
-SQL_TIMEOUT_SECONDS=30
-SQL_ROW_LIMIT=1000
-SQL_MAX_ROWS=100000
-MAX_JOIN_DEPTH=3
-MAX_SUBQUERY_DEPTH=3
-
-# RAG Configuration
-VECTOR_TOP_K=10
-MAX_FK_HOPS=3
-EMBEDDING_DIMENSION=1536
-
-# Logging
-LOG_LEVEL=INFO
-
