--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-community>=0.3.31",
     "langchain-openai>=0.3.35",
+    "langchain-google-genai>=4.1.3",
     "numpy>=2.1.3",
     "neo4j>=6.0.2",
     "psycopg[binary]>=3.2.10",
